Updated, removed script google maps, changed for DMaps library

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </audio>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script src="js/kube.min.js"></script>
+    <script src="http://dezkareid.github.io/dmaps/dmaps.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&libraries=geometry" async defer>
-    </script>
   </body>
 </html>
