--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/kube.min.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="public/css/kube.min.css" />
+    <link rel="stylesheet" href="public/css/main.css" />
     <title>PokeMap Yolo</title>
   </head>
   <body>
@@ -19,16 +19,16 @@
     </div>
       
     <div class="units-row end">
-      <div class="unit-centered unit-90">
-        <div id="map"></div>
-      </div>
+      <section id="container-map" class="unit-centered unit-90">
+      </section>
     </div>
     <audio id="audio" preload="auto" autoplay loop hidden>
       <source src="http://216.227.134.162/ost/pokemon-original-game-soundtrack/tmlaxizceu/101-opening.mp3" type="audio/mpeg">
     </audio>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script src="js/kube.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=v=3.exp&signed_in=true&libraries=places,geometry"></script>
     <script src="http://dezkareid.github.io/dmaps/dmaps.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
+    <script src="public/js/bundle.js"></script>
   </body>
 </html>
