Fixed route to kube.js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <source src="http://216.227.134.162/ost/pokemon-original-game-soundtrack/tmlaxizceu/101-opening.mp3" type="audio/mpeg">
     </audio>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-    <script src="js/kube.min.js"></script>
+    <script src="public/js/kube.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=v=3.exp&signed_in=true&libraries=places,geometry"></script>
     <script src="http://dezkareid.github.io/dmaps/dmaps.js"></script>
     <script src="public/js/bundle.js"></script>
