updated grid to show pokedex and pokemap

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <div class="units-row">
       <div class="unit-centered unit-40"><button class="btn btn-red" onclick="document.getElementById('audio').pause()">Detener música</button></div>
     </div>
-      
-    <div class="units-row end">
-      <section id="container-map" class="unit-centered unit-90">
-      </section>
-    </div>
+   
+
+    <section id="container-map" class="units-row">
+    </section>
+    
+
+
     <audio id="audio" preload="auto" autoplay loop hidden>
       <source src="http://216.227.134.162/ost/pokemon-original-game-soundtrack/tmlaxizceu/101-opening.mp3" type="audio/mpeg">
     </audio>
